--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 		<body>
 			<nav>
 	    		<ul>
-	        		<li><font size="7">The Economics of Bitcoin</font></li>
+	        		<li><font size="7">The Economics of Bitcoin and the Blockchain</font></li>
               		</ul>
 			</nav>
 			<div class="container">
