--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 		<div class="sidenav">
 		  <a href="/">Home</a>
 		  <a href="https://fylobc.github.io/parts/Part_0">Part 0: The Minimum You Need to Know</a>
-		  <a>Part 1</a>
+		  <a>Part 1:</a>
 		  <a href="https://fylobc.github.io/parts/Part_1">-Where Does Bitcoin’s Value Come From?</a>
 		  <a href="https://fylobc.github.io/parts/Part_2">-The Economics of Mining</a>
 		  <a href="https://fylobc.github.io/parts/Part_3">-Decentralized Currencies and Central Banks</a>
