--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,9 @@
 		  <a href="https://fylobc.github.io/parts/Part_3">-Decentralized Currencies and Central Banks</a>
 		  <a href="https://fylobc.github.io/parts/Part_4">-Can Bitcoin Function as a Currency?</a>
 		  <a>Part 2: The Blockchain</a>
-		  <a href="https://fylobc.github.io/parts/Part_5">-Bitcoin and Businesses Part 1</a>
-		  <a href="https://fylobc.github.io/parts/Part_6">-Bitcoin and Businesses Part 2</a>
+		  <a href="https://fylobc.github.io/parts/Part_5">-The Blockchain and Trust</a>
+		  <a href="https://fylobc.github.io/parts/Part_6">-The Blockchain and Businesses Part 1</a>
+		  <a href="https://fylobc.github.io/parts/Part_7">-The Blockchain and Businesses Part 2</a>
 		  <a href="/resources">Resources</a>
 		</div>
 		<body>
