--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,22 +10,17 @@
 		</head>
 		<div class="sidenav">
 		  <a href="/">Home</a>
-		  <a href="https://fylobc.github.io/parts/Part_0">Part 0: The Minimum You Need to Know</a>
-		  <a>Part 1: Bitcoin</a>
+		  <a href="https://fylobc.github.io/parts/Part_0">The Minimum You Need to Know</a>
 		  <a href="https://fylobc.github.io/parts/Part_1">-Where Does Bitcoin’s Value Come From?</a>
 		  <a href="https://fylobc.github.io/parts/Part_2">-The Economics of Mining</a>
 		  <a href="https://fylobc.github.io/parts/Part_3">-Decentralized Currencies and Central Banks</a>
 		  <a href="https://fylobc.github.io/parts/Part_4">-Can Bitcoin Function as a Currency?</a>
-		  <a>Part 2: The Blockchain</a>
-		  <a href="https://fylobc.github.io/parts/Part_5">-The Blockchain and Trust</a>
-		  <a href="https://fylobc.github.io/parts/Part_6">-The Blockchain and Businesses Part 1</a>
-		  <a href="https://fylobc.github.io/parts/Part_7">-The Blockchain and Businesses Part 2</a>
 		  <a href="/resources">Resources</a>
 		</div>
 		<body>
 			<nav>
 	    		<ul>
-	        		<li><font size="7">The Economics of Bitcoin and the Blockchain</font></li>
+	        		<li><font size="7">Essays Bitcoin and the Blockchain</font></li>
               		</ul>
 			</nav>
 			<div class="container">
