Fixed typo in title

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 		<body>
 			<nav>
 	    		<ul>
-	        		<li><font size="7">Essays Bitcoin and the Blockchain</font></li>
+	        		<li><font size="7">Essays on Bitcoin and the Blockchain</font></li>
               		</ul>
 			</nav>
 			<div class="container">
