Edited title of essay

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 		<div class="sidenav">
 		  <a href="/">Home</a>
 		  <a href="https://fylobc.github.io/parts/Part_0">The Minimum You Need to Know</a>
-		  <a href="https://fylobc.github.io/parts/Part_1">Where Does Bitcoin’s Value Come From?</a>
+		  <a href="https://fylobc.github.io/parts/Part_1">A First Look At Where Bitcoin’s Value Comes From</a>
 		  <a href="https://fylobc.github.io/parts/Part_2">The Economics of Mining</a>
 		  <a href="https://fylobc.github.io/parts/Part_3">Decentralized Currencies and Central Banks</a>
 		  <a href="https://fylobc.github.io/parts/Part_4">Can Bitcoin Function as a Currency?</a>
