--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
 		  <a href="https://fylobc.github.io/parts/Part_1">A First Look At Where Bitcoin’s Value Comes From</a>
 		  <a href="https://fylobc.github.io/parts/Part_3">Decentralized Currencies and Central Banks</a>
 		  <a href="https://fylobc.github.io/parts/Part_2">Blockchain and Energy Part 1: Mining as Arbitrage</a>
+		  <a href="https://fylobc.github.io/parts/Part_5">Blockchain and Energy Part 2: Integrating Renewable Energy Sources</a>
 		  <a href="https://fylobc.github.io/parts/Part_4">Can Bitcoin Function as a Currency?</a>
 		  <a href="/resources">Resources</a>
 		</div>
