--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
 		</head>
 		<div class="sidenav">
 		  <a href="/">Home</a>
+		  <a href="https://fylobc.github.io/parts/Part_0">1. Into Friedland</a>
 		</div>
 		<body>
 			<nav>
