--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
 		<div class="sidenav">
 		  <a href="/">Home</a>
 		  <a href="https://fylobc.github.io/parts/Part_0">1. Into Friedland</a>
+		  <a href="https://fylobc.github.io/parts/Part_1">2. All Black</a>
 		</div>
 		<body>
 			<nav>
